# dcbot_template

./: .gitignore  pyproject.toml  readme.md  run.sh
docs/: main.md
src/: app.py
src/cogs/: cogs.py
src/models/: bot.py  botManager.py  kokoro.py
