[tool.poetry]
name = "dcbot-template"
version = "1.0"
description = "Discord Bot Template (Base in python+poetry, with discord.py)"
authors = ["miyago9267 <miyago@miyago9267.com>"]
readme = "README.md"
packages = [{include = "dcbot_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
